--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-VITE_SUPABASE_URL=
-VITE_SUPABASE_ANON_KEY=
+VITE_SUPABASE_URL=YOUR_SUPABASE_URL
+VITE_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
 # ambil disini pak currencyfreaks.com
 VITE_CURRENCY_API_KEY=
 VITE_TIMEZONE_OFFSET=7
